# avogadro-squared

./: .gitmodules  CMakeLists.txt
cmake/: External_Qt.cmake  External_avogadro.cmake  External_avogadrovtk.cmake  External_libxml2.cmake  External_openbabel.cmake  External_openqube.cmake  External_zlib.cmake  avogadro_tarballs.cmake  download_all.cmake  win_config_qt.cmake.in
